(include_subdirs unqualified)

(test
 (name h4zeltest)
 (libraries
  grove
  alcotest
  sexplib
  base
  ptmap
  incr_dom
  ; haz3lmenhir
  junit
  junit_alcotest
  bisect_ppx.runtime)
 (modes js)
 (preprocess
  (pps
   js_of_ocaml-ppx
   ppx_let
   ppx_sexp_conv
   ppx_deriving.show
   ppx_yojson_conv)))
